# CovidTracker

./: LICENSE  README.md
api/: .env  .env.example  ormconfig.js  package-lock.json  package.json
api/src/: index.js
api/src/Entity/: ContactSchema.js  DeviceSchema.js  MeetingSchema.js  PendingNotificationSchema.js
api/src/Model/: Contact.js  Device.js  Meeting.js  PendingNotification.js
api/src/Routes/CheckForContact/: index.js
api/src/Routes/Contact/: index.js
api/src/Routes/RegisterDevice/: index.js
api/src/Routes/Report/: index.js
api/src/Routes/ReportContact/: index.js
api/src/Routes/ReportInfectedness/: index.js
api/src/Routes/SensorData/: index.js
client/app/: build.gradle  local.properties
client/app/gradle/wrapper/: gradle-wrapper.properties
client/app/src/androidTest/java/cc/holdinga/covidtracker/: ExampleInstrumentedTest.java
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/cc/holdinga/covidtracker/: App.java  CheckForContactService.java  (+5 more)
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: colors.xml
client/gradle/wrapper/: gradle-wrapper.properties
transportation_mode/: .gitignore  Linear.ipynb  README.md  Transportation mode.ipynb  XGBoost.ipynb  flask_server.py  pyproject.toml  server.py  utils.py
transportation_mode/model/: saved_model.pb
transportation_mode/model/variables/: variables.data-00000-of-00001  variables.index
transportation_mode/models/linear/: saved_model.pb
transportation_mode/models/linear/variables/: variables.data-00000-of-00001  variables.index
(+16 files in other folders)
