[tool.poetry]
name = "transportation_mode"
version = "0.1.0"
description = "get transportation mode using gyroscope, acceleration and sound"
authors = ["Victor Gorchilov <victor@gorchilov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
tensorflow = "^2.3.1"
yapf = "^0.30.0"
flask = "^1.1.2"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
