[tool.poetry]
name = "transportation_mode"
version = "0.1.0"
description = "get transportation mode using gyroscope, acceleration and sound"
authors = ["Victor Gorchilov <victor@gorchilov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
yapf = "^0.30.0"
pandas = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
